# libBioSmoother

./: .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  main.py  meta.yaml  norm_corr.tsv  preprocess.sh  publish_mac_m1.sh  setup.py  test_publish_mac_m1.sh
.github/workflows/: python-publish.yml  test-cibuildwheel.yml  test.yml  test_build.yml  test_install.yml  tmp-upload-missing-versions.yml
benchmarking/: all_all.sh  benchmark_all.sh  create_images.sh  distiller_all.sh  index_all.sh  index_sizes.ipynb  norm_corelation.ipynb  normalization_all.sh  v4c.ipynb
benchmarking/organisms/drosophila_m/: download_datasets.sh
benchmarking/organisms/e_coli/: download_datasets.sh
benchmarking/organisms/human/: download_datasets.sh
benchmarking/organisms/s_cerevisiae/: download_datasets.sh
benchmarking/organisms/t_brucei/: build_index_2.sh  distiller_rep2.sh  download_datasets.sh  download_datasets_2.sh  download_datasets_3.sh  download_datasets_4.sh
benchmarking/radicl-mouse/: build_index.sh
cmake/: cmake_command.txt  format.sh
conda/: build.sh  conda_install.sh  create_dev_env.sh  dev_env.yml  dev_env_linux.yml  dev_env_mac.yml  meta.yaml  setup.py
conda_env/: create_env.sh  libContactMapping.yml  libSmoother.yml
contrib/inc/pybind11_json/: pybind11_json.hpp
inc/cm/: annotation.h  annotation_index.h  bin_size.h  build_time.h.in  colors.h  computation.h  coords.h  coverage.h  include.h  indexer.h  normalization.h  partial_quarry.h  replicates.h  sps_interface.h  version.h.in
libContactMapping/: cli.py  cooler_interface.py  quarry.py
libSmoother/: _import_lib_smoother.py  indexer.py  quarry.py
libbiosmoother/: __init__.py  _parse_and_group_reads.py  benchmark_runtime.py  cli.py  cooler_interface.py  export.py  indexer.py  parameters.py  quarry.py
libbiosmoother/conf/: button_names.json  button_tabs.json  default.json  descriptions.json
libsmoother/: __init__.py  _import_lib_smoother_cpp.py  _parse_and_group_reads.py  cli.py  cooler_interface.py  default.json  export.py  higlass.py  indexer.py  indexer_parser.py  normalization_correlation.py  parameters.py  quarry.py  test.py
libsmoother/conf/: default.json  valid.json
notebooks/: index_sizes.ipynb  norm_corelation.ipynb
python/: __init__.py  _parse_and_group_reads.py  compare_tsv.py  indexer.py  indexer_parser.py  main.py  quarry.py  test.py
python/libContactMapping/: __init__.py  _import_lib_cm.py  _parse_and_group_reads.py  compare_tsv.py  evenly_dividible.py  indexer.py  indexer_parser.py  libContactMapping.so_dis  quarry.py
src/: conf_version.h.in.py  main.cpp
test/: benchmark_dict_export.py  button_layout_mockup.txt  evenly_dividible.py  libContactMappingFlowDiagram.dot  node_desc.txt  scatter_points.py  session_mockup.json  test_num_multimapping_reads.py  write_testdata.py
